<resources>
    <string name="app_name">Reminder1</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="register">New User, Click here to register</string>
    <string name="Submit_Login">login</string>
    <string name="text">No Reminders Set\nClick + to add the reminders</string>
    <string name="Add">Add new reminder</string>
    <string name="Register">Register</string>
    <string name="Submit_register">register</string>
    <string name="Registered">Already Registered, Click here to Sign In</string>
    <string name="reminder">Reminder App</string>
    <string name="clock">Date and Time</string>
    <string name="SELECT">SELECT</string>
    <string name="Message">Message</string>
</resources>