<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">



            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginBottom="75dp"
                android:textSize="35sp"
                android:textAlignment="center"
                android:text="@string/Register" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="400dp"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:padding="20dp"
                android:ems="10"
                android:layout_below="@id/register"
                android:inputType="textPersonName"
                android:hint="@string/Username"
                android:autofillHints="username"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="400dp"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText"
                android:layout_marginBottom="30dp"
                android:padding="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/Password"
                android:autofillHints="password"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText2"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/Submit_register" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/Registered"/>



</RelativeLayout>